# correctable-lecture-translator

./: .gitignore  .history-root  README.md  api.yaml
.github/workflows/: actions-test.yaml
backend/: .history-root  README.md  api_test.ipynb  app.py  computation_node.py  requirements-old.txt  run_commands.sh  simulation_of_requests.py
backend/api/: .history-root  app.py  audio_handler.py  buffer_common.py  common.py  networking_common.py  pyproject.toml  test_text_handlers.py  text_handlers.py
backend/api-src/: Dockerfile  pyproject.toml
backend/api-src/api/: app.py  audio_handler.py  common.py  networking_common.py  test_text_handlers.py  text_handlers.py
backend/api/src/: api.py  buffer_common.py  common.py  networking_common.py  text_handlers.py
backend/api/tests/: simulation_of_requests.py
backend/data/: ip_adresses.txt  transcript_cs_en.json  transript_cs_cs.json
backend/model/: computation_node.py  computation_node_fast.py  pyproject.toml
backend/model-src/: pyproject.toml
backend/model-src/model/: .history-root  computation_node.py  computation_node_fast.py  computation_node_translate.py  test.py
backend/model/src/: computation_node_fast.py
frontend/: .dockerignore  BaseDockerfile  Dockerfile  README.md  index.html  nohup.out  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  webpack.config.js
frontend/public/: recorder.worklet.js
frontend/src/: App.vue  main.ts
frontend/src/components/: AudioRecorder.vue  DictEntry.vue  Dictionary.vue  EditTextChunk.vue  Protected.vue  SessionList.vue  TextEditor.vue  TextViewer.vue
frontend/src/layouts/default/: AppBar.vue  Default.vue
frontend/src/router/: index.ts
frontend/src/store/: app.ts
frontend/src/styles/: app.scss  dictionary.scss  editChunk.scss  editTextChunk.scss  home.scss  protected.scss  recording.scss  sessionList.scss  textEditor.scss  textViewer.scss  theme.scss  viewer.scss  viewing.scss
frontend/src/utils/: chunk.ts  client.ts  dict.ts  mic-recorder.ts
frontend/src/views/: Home.vue  Recorder.vue  Recording.vue  Viewer.vue  Viewing.vue
