[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = [
    "Marko Cechovic <markocechovic@gmail.com>",
    "Jakub Parada <5pjakub@gmail.com>",
]
# readme = "README.md"
# packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.0"
Flask-Cors = "4.0.0"
jsonpickle = "3.0.2"

[tool.poetry.group.dev.dependencies]
black = "23.9.1"
mypy = "1.5.1"
ruff = "0.0.291"
types-Flask-Cors = "4.0.0"

[tool.black]
line-length = 99

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "PERF", "ARG"]
ignore = ["D211", "D213", "T201"]
line-length = 99

[tool.poetry.scripts]
start-api = "api.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
