[tool.poetry]
name = "correctable-lecture-translator-api"
version = "0.1.0"
description = ""
authors = [
    "Marko Cechovic <markocechovic@gmail.com>",
    "Jakub Parada <5pjakub@gmail.com>",
]
# readme = "README.md"
packages = [{ include = "api", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^4.0.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
ruff = "^0.0.291"
types-flask-cors = "^4.0.0"

[tool.black]
line-length = 99

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "PERF", "ARG"]
ignore = ["D211", "D213", "T201"]
line-length = 99


# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
