[tool.poetry]
name = "model"
version = "0.1.0"
description = "Computation node"
authors = [
    "Marko Cechovic <markocechovic@gmail.com>",
    "Jakub Parada <5pjakub@gmail.com>",
]
# readme = "README.md"
# packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
librosa = "0.10.1"
requests = "2.31.0"
torch = "2.1.1"
tokenize_uk = "0.2.0"
opus-fast-mosestokenizer = "0.0.8.5"
faster-whisper = "0.10.0"
openai-whisper = "20231117"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
ruff = "^0.0.291"
types-requests = "2.31.0.10"

[tool.black]
line-length = 99

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "PERF", "ARG"]
ignore = ["D211", "D213", "T201"]
line-length = 99

[tool.poetry.scripts]
start-model = "model.computation_node_fast:main"
start-model-old = "model.computation_node:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
